# marcsrover

./: .gitignore  CONTRIBUTING.md  README.md  cam.py  config.json  main.py  pyproject.toml  requirements.txt  shell.nix  zenoh_config.json
.github/workflows/: deploy.yml
apps/: publish_camera.yml  stream_camera.py  stream_camera.yml  test.py  test_cam_dora.yml
cerebri/: .gitignore  .mxproject  cerebri.ioc  cerebri.launch
cerebri/Core/Inc/: ax12.h  main.h  motor.h  pid.h  sounds.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
cerebri/Core/Src/: adc.c  ax12.c  gpio.c  i2c.c  main.c  motor.c  pid.c  sounds.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c  usart.c
documentation/: book.toml
documentation/src/: FlashCard.md  Installation.md  InstallationFirstTimeCard.md  InstallationRB5.md  Nodes.md  SUMMARY.md  TestRobot.md  User.md  Zenoh.md  ZenohConfig.md  devpc.md  hardware.md  intro.md  microcontroller.md  sbc.md  simulator.md  uv.md  zenoh.md
documentation/src/old/: Installation.md  InstallationRB5.md  Nodes.md  Presentation.md  User.md  Wifi.md
graphs/: cam_to_zenoh.yml
node-hub/opencv-plot/: pyproject.toml
node-hub/opencv-video-capture/: pyproject.toml
nodes/: capture_camera.py  capture_joystick.py  capture_lidar.py  controller.py  lidar.py  message.py  monitoring.py  motor_control.py  node_template.py  realsense.py  stream_camera.py  switch.py  test.py  vslam.py  zenoh_cam.py  zenoh_publish.py  zenoh_receive.py
nodes/old/: capture_camera.py  stream_camera.py  test.py
pyrealsense2/: README.md  pyrealsense2-2.55.1-cp312-cp312-linux_x86_64.whl  pyrealsense2-2.55.1-cp312-cp312-win_amd64.whl
rplidar_sdk-master/workspaces/vc14/: sdk_and_demo.sln
rplidar_sdk-master/workspaces/vc14/frame_grabber/: frame_grabber.vcxproj
rplidar_sdk-master/workspaces/vc14/rplidar_driver/: rplidar_driver.vcxproj
rplidar_sdk-master/workspaces/vc14/simple_grabber/: simple_grabber.vcxproj
rplidar_sdk-master/workspaces/vc14/ultra_simple/: ultra_simple.vcxproj
sim/controllers/controller_jaune/: controller_jaune.py
sim/controllers/controller_violet/: controller_violet.py
sim/controllers/marcsrover/: controller.pyi  marcsrover.py  vehicle.pyi
sim/controllers/my_controller_c/: Makefile  my_controller_c  my_controller_c.c
sim/protos/: .~lock.TT02.proto#
sim/worlds/: .Piste4.wbproj  .Piste_CoVAPSy_2023b.wbproj  .Piste_CoVAPSy_2024_Essaie.wbproj  .arene.wbproj  Piste_CoVAPSy_2023b.wbt  Piste_CoVAPSy_2024_Essaie.wbt
src/: pyrealsense2.pyi
src/marcsrover/: __init__.py  arguments.py  message.py  test.py
src/marcsrover/car/: __init__.py  imu.py  lidar.py  realsense.py  rover.py  servo.py  template.py
src/marcsrover/common/: opencv_camera.py  realsense_depth.py  template.py
src/marcsrover/host/: __init__.py  auto_pilot.py  joystick_controller.py  keyboard_controller.py  monitor.py  old_monitor.py  template.py
src/marcsrover/host/monitor/: IMU.py  __init__.py  auto_pilot.py  cartographer.py  controller.py  lidar.py  main_window.py  opencv.py  realsense.py
tests/: test_realsense.py  test_speed.py  test_steering.py
